feat: added admin categories
